version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/Figure.rst.txt
.. vale off



:class:`Figure`
===============

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.Figure(internalObject: Any)
              Figure(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext)

   Bases: :py:obj:`object`


   
   Defines a Figure.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: Figure

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateObjRef`
            - CreateObjRef method.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetAPIName`
            - Property name bound to dispId.
          * - :py:attr:`~GetAllProperties`
            - GetAllProperties method.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetEnumName`
            - Enum name bound to value
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetIconFile`
            - GetIconFile method.
          * - :py:attr:`~GetLifetimeService`
            - GetLifetimeService method.
          * - :py:attr:`~GetObjectData`
            - GetObjectData method.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GetPath`
            - GetPath method.
          * - :py:attr:`~GetPropertyName`
            - GetPropertyName method.
          * - :py:attr:`~GetPropertyValue`
            - GetPropertyValue method.
          * - :py:attr:`~GetVisibleProperties`
            - GetVisibleProperties method.
          * - :py:attr:`~GetVisiblePropertyNames`
            - GetVisiblePropertyNames method.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~InitializeLifetimeService`
            - InitializeLifetimeService method.
          * - :py:attr:`~IsPropertyEditable`
            - IsPropertyEditable method.
          * - :py:attr:`~IsPropertyVisible`
            - IsPropertyVisible method.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyById`
            - PropertyById method.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~GroupingFolder`
            - GroupingFolder property.
          * - :py:attr:`~IconName`
            - IconName property.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~Name`
            - Name property.
          * - :py:attr:`~ObjectId`
            - ObjectId property.
          * - :py:attr:`~ObjectState`
            - ObjectState property.
          * - :py:attr:`~ObjectTags`
            - ObjectTags property.
          * - :py:attr:`~Parent`
            - Parent property.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~State`
            - State property.
          * - :py:attr:`~Text`
            - Gets or sets the Text.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: Children
   :type: Optional[List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]


   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[Iterable[Ansys.ACT.Automation.Mechanical.Comment]]


   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]


   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingFolder
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   GroupingFolder property.
















   ..
       !! processed by numpydoc !!

.. py:property:: IconName
   :type: Optional[str]


   
   IconName property.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSFigureAuto]


   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: Name
   :type: Optional[str]


   
   Name property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectId
   :type: Optional[int]


   
   ObjectId property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectState
   :type: Optional[Ansys.Mechanical.DataModel.Enums.ObjectState]


   
   ObjectState property.
















   ..
       !! processed by numpydoc !!

.. py:property:: ObjectTags
   :type: Optional[Iterable[Ansys.Mechanical.DataModel.Interfaces.IObjectTag]]


   
   ObjectTags property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Parent
   :type: Optional[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]


   
   Parent property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: State
   :type: Optional[Ansys.Mechanical.DataModel.Enums.Legacy.State]


   
   State property.
















   ..
       !! processed by numpydoc !!

.. py:property:: Text
   :type: Optional[str]


   
   Gets or sets the Text.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[tuple[Ansys.ACT.Automation.Mechanical.Property]]


   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> None

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> None

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateObjRef(requestedType: type) -> System.Runtime.Remoting.ObjRef

   
   CreateObjRef method.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> None

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(other: Ansys.Mechanical.DataModel.Interfaces.IDataModelObject) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAPIName(dispId: int) -> str

   
   Property name bound to dispId.

   ..
       !! processed by numpydoc !!

.. py:method:: GetAllProperties() -> List[Ansys.ACT.Automation.Mechanical.AutomationPropertyWrapper]

   
   GetAllProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: bool, children: List[ChildrenType]) -> List[ChildrenType]
               GetChildren(category: Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory, recurses: bool, children: List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]) -> List[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetEnumName(enumType: type, value: int, dispId: int) -> str

   
   Enum name bound to value

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetIconFile() -> System.Byte

   
   GetIconFile method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetLifetimeService() -> Any

   
   GetLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetObjectData(info: System.Runtime.Serialization.SerializationInfo, context: System.Runtime.Serialization.StreamingContext) -> None

   
   GetObjectData method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: str) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPath() -> str

   
   GetPath method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyName(dispId: int) -> str

   
   GetPropertyName method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetPropertyValue(name: str) -> Any

   
   GetPropertyValue method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisibleProperties() -> List[System.Reflection.PropertyInfo]

   
   GetVisibleProperties method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetVisiblePropertyNames() -> List[str]

   
   GetVisiblePropertyNames method.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> None

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: InitializeLifetimeService() -> Any

   
   InitializeLifetimeService method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyEditable(dispId: int) -> bool
               IsPropertyEditable(propName: str) -> bool

   
   IsPropertyEditable method.

   ..
       !! processed by numpydoc !!

.. py:method:: IsPropertyVisible(dispId: int) -> bool
               IsPropertyVisible(propName: str) -> bool

   
   IsPropertyVisible method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyById(dispId: int) -> Ansys.ACT.Automation.Mechanical.Property

   
   PropertyById method.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: str) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: str) -> None

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on